--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
     "path": "^0.12.7",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-loader-spinner": "^8.0.2",
+    "react-router": "^7.10.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
